# SUBJ

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  subjConfig.cmake
examples/: CMakeLists.txt  pysubj_example.py  subj_example.cpp
include/subj/: BinomialOpinion.h  DirichletPDF.h  Histogram.h  HyperOpinion.h  MultinomialOpinion.h  Operators.h  OpinionOwner.h  Version.h  subj.h
src/: BinomialOpinion.cpp  DirichletPDF.cpp  Histogram.cpp  HyperOpinion.cpp  MultinomialOpinion.cpp  Operators.cpp  OpinionOwner.cpp  SubjPythonBindings.cpp  Version.cpp
src/pysubj/: __init__.py
